Rollback z-index change. Fixes infowindow z-index

--- a/themes/css/cartodb.css
+++ b/themes/css/cartodb.css
@@ -63,7 +63,7 @@
 
   div.cartodb-infowindow {
     position: absolute;
-    z-index: 102;
+    z-index: 12;
   }
 
   div.cartodb-popup {
@@ -110,7 +110,7 @@
     display:block;
     height:10px;
     width:190px;
-    z-index: 105;
+    z-index: 5;
   }
 
   div.cartodb-popup .jspContainer:after {
@@ -153,7 +153,7 @@
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=1);
     filter: alpha(opacity=100);
     text-transform:uppercase;
-    z-index:103;
+    z-index:3;
   }
 
   /* When there are no fields in header popup themes */
@@ -715,7 +715,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -ms-transform: translateZ(10px);
     -o-transform: translateZ(10px);
     transform: translateZ(10px);
-    z-index: 103;
+    z-index: 3;
     font-family: 'Helvetica Neue', Helvetica, sans-serif;
   }
 
@@ -791,7 +791,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-    z-index: 105;
+
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
@@ -800,7 +800,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
 
     border: 1px solid #999999;
     background: white;
-    z-index: 105;
+    z-index: 5;
 
     cursor: text;
   }
@@ -851,7 +851,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
 
     border: 1px solid #999999;
     background: white;
-    z-index: 105;
+    z-index: 5;
   }
 
   div.cartodb-legend .legend-title {
@@ -1160,7 +1160,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-    z-index: 105;
+    z-index: 5;
     background: white;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -1247,7 +1247,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-    z-index: 105;
+    z-index: 5;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
@@ -1279,7 +1279,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-    z-index: 105;
+    z-index: 5;
     background: url('../img/loader.gif') no-repeat center center white;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -1304,6 +1304,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
+    z-index: 5;
     background: white;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -1311,7 +1312,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -o-border-radius: 4px;
     border-radius: 4px;
     border: 1px solid #999999;
-    z-index:105;
+    z-index:5;
   }
   
   div.cartodb-layer-selector-box a.layers {
@@ -1453,7 +1454,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     background: -o-linear-gradient(rgba(0, 0, 0, 0.18), rgba(0, 0, 0, 0));
     background: linear-gradient(rgba(0, 0, 0, 0.18), rgba(0, 0, 0, 0));
   
-    z-index:100;
+    z-index:0;
   }
   
   div.cartodb-layer-selector-box div.cartodb-dropdown ul li a.switch span.handle {
@@ -1469,7 +1470,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     border-radius: 12px;
     border: 1px solid #44759e;
     background: #F2F2F2;
-    z-index: 102;
+    z-index: 2;
     -webkit-transform-style: "linear";
     -moz-transform-style: "linear";
     -ms-transform-style: "linear";
@@ -1533,6 +1534,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
+    z-index: 5;
     background: white;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -1540,7 +1542,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -o-border-radius: 4px;
     border-radius: 4px;
     border: 1px solid #999999;
-    z-index:105;
+    z-index:5;
   }
 
   div.cartodb-searchbox span.loader {
@@ -1551,7 +1553,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     width:22px;
     height:22px;
     background: url('../img/loader.gif') no-repeat center center white;
-    z-index:105;
+    z-index:5;
   }
 
   div.cartodb-searchbox input.text {
@@ -1568,7 +1570,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     font:normal 14px Arial;
     color:#999999;
     text-align:left;
-    z-index:102;
+    z-index:2;
   }
 
   div.cartodb-searchbox input.text:focus {
@@ -1589,7 +1591,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     text-transform: uppercase;
     border:none;
     background: url('../img/other.png') no-repeat -56px 0;
-    z-index:101;
+    z-index:1;
   }
 
   div.cartodb-searchbox input.submit:hover {
@@ -1606,8 +1608,8 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
+    z-index: 5;
     background: white;
-    z-index:105;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
@@ -1615,7 +1617,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     border-radius: 4px;
     border: 1px solid #999999;
     text-align:left;
-    z-index:105;
+    z-index:5;
   }
 
   /* CartoDB dropdown */
@@ -1634,7 +1636,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -ms-box-shadow: rgba(0,0,0,0.2) 0 0 4px 1px;
     -o-box-shadow: rgba(0,0,0,0.2) 0 0 4px 1px;
     box-shadow: rgba(0,0,0,0.2) 0 0 4px 1px;
-    z-index:150;
+    z-index:50;
   }
 
   div.cartodb-dropdown.border {
@@ -1650,7 +1652,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     border-left:6px solid transparent;
     border-right:6px solid transparent;
     border-bottom:6px solid #999;
-    z-index:100;
+    z-index:0;
   }
 
   div.cartodb-dropdown div.tail span.border {
@@ -1662,7 +1664,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     border-left:6px solid transparent;
     border-right:6px solid transparent;
     border-bottom:6px solid white;
-    z-index:102;
+    z-index:2;
   }
 
 
@@ -1670,7 +1672,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
 
   div.cartodb-tooltip {
     position: absolute;
-    z-index: 105;
+    z-index: 5;
     display: none;
   }
 
@@ -1725,7 +1727,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-    z-index: 105;
+    z-index: 5;
     background: white;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -1734,7 +1736,7 @@ div.cartodb-popup.header.yellow a.cartodb-popup-close-button:hover {
     border-radius: 4px;
     border: 1px solid #999999;
     text-align:left;
-    z-index: 105;
+    z-index:5;
   }
 
   div.cartodb-timeslider ul {
